{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 25,
  "lineage": "8ffb1e69-3f44-496d-3693-473fe19896aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ce87355f1eb4154f",
            "owner_id": "326869539878",
            "tags": {
              "Name": "terraform-eks"
            },
            "vpc_id": "vpc-0d4cad1de5995ec07"
          },
          "depends_on": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05f1dce3416c6a3dd",
            "owner_id": "326869539878",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce87355f1eb4154f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0d4cad1de5995ec07"
          },
          "depends_on": [
            "aws_internet_gateway.eks",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4713546ce8a8571",
            "route_table_id": "rtb-05f1dce3416c6a3dd",
            "subnet_id": "subnet-0fbfce4b044df0c19"
          },
          "depends_on": [
            "aws_route_table.eks",
            "aws_subnet.eks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028b29230fc6fd360",
            "route_table_id": "rtb-05f1dce3416c6a3dd",
            "subnet_id": "subnet-009e374b81790a85b"
          },
          "depends_on": [
            "aws_route_table.eks",
            "aws_subnet.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326869539878:security-group/sg-0e045a48e5b8822f1",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e045a48e5b8822f1",
            "ingress": [],
            "name": "terraform-eks-cluster",
            "name_prefix": null,
            "owner_id": "326869539878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4cad1de5995ec07"
          },
          "depends_on": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326869539878:security-group/sg-0c764ae32834b46ca",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c764ae32834b46ca",
            "ingress": [],
            "name": "terraform-eks-node",
            "name_prefix": null,
            "owner_id": "326869539878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-node",
              "kubernetes.io/cluster/terraform-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4cad1de5995ec07"
          },
          "depends_on": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-cluster-ingress-node-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-4294060567",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e045a48e5b8822f1",
            "self": false,
            "source_security_group_id": "sg-0c764ae32834b46ca",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.eks-cluster",
            "aws_security_group.eks-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-node-ingress-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2616210351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c764ae32834b46ca",
            "self": false,
            "source_security_group_id": "sg-0e045a48e5b8822f1",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.eks-cluster",
            "aws_security_group.eks-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-node-ingress-self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-2763222049",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c764ae32834b46ca",
            "self": false,
            "source_security_group_id": "sg-0c764ae32834b46ca",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.eks-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326869539878:subnet/subnet-0fbfce4b044df0c19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0fbfce4b044df0c19",
            "map_public_ip_on_launch": false,
            "owner_id": "326869539878",
            "tags": {
              "Name": "terraform-eks-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0d4cad1de5995ec07"
          },
          "depends_on": [
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326869539878:subnet/subnet-009e374b81790a85b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-009e374b81790a85b",
            "map_public_ip_on_launch": false,
            "owner_id": "326869539878",
            "tags": {
              "Name": "terraform-eks-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0d4cad1de5995ec07"
          },
          "depends_on": [
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326869539878:vpc/vpc-0d4cad1de5995ec07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cacbfe56abd4bd74",
            "default_route_table_id": "rtb-01cdfa8cf45baf5f2",
            "default_security_group_id": "sg-003135dab14f9980c",
            "dhcp_options_id": "dopt-ce68bcb6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d4cad1de5995ec07",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01cdfa8cf45baf5f2",
            "owner_id": "326869539878",
            "tags": {
              "Name": "terraform-eks-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}